--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-table": "^8.19.2",
     "autoprefixer": "10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.2.1",
+    "lucide-react": "^0.404.0",
     "next": "latest",
     "postcss": "8.4.33",
+    "puppeteer": "^22.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.3.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
