--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "next build",
     "start": "next start"
   },
+  "type": "module",
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
